--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/504ea4f88f.js" crossorigin="anonymous"></script>
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
- 
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/submit-tweet.js" defer></script>
   </head>
 
   <body>
@@ -56,8 +63,37 @@
 
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <main id="container">
+      <section class="new-tweet">
+        <h2>Tweet Tweet</h2>
+        <form action="/tweets" method="POST">
+          <label for="tweet-text" class="inputText">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div class="bottom">
+            <button type="sumit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+      <article>
+        <header class="tweet-header">
+          <div>
+            <img src="https://i.imgur.com/73hZDYK.png" alt="profile icon">
+            <p class="person-name">spiderman</p>
+          </div>
+          <div>@spiderman</div>
+        </header>
+        <p>I'm your friend!</p>
+        <footer class="tweet-footer">
+          <div >7 days ago</div>
+          <div class="tweet-footer-right">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+      <div id="tweets-container"></div>
     </main>
   </body>
 </html>
