--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/504ea4f88f.js" crossorigin="anonymous"></script>
 
@@ -54,7 +53,6 @@
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div>
           <h2>Your Name</h2>
       </div>
@@ -64,12 +62,10 @@
     <!-- Page-specific (main) content here -->
     <main id="container">
       <section class="new-tweet">
-        <h2>Tweet Tweet</h2>
         <form action="/tweets" method="POST">
-          <label for="tweet-text" class="inputText">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="bottom">
-            <button type="sumit">Tweet</button>
+            <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
