--- a/public/index.html
+++ b/public/index.html
@@ -36,18 +36,21 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-    <script type="text/javascript" src="/scripts/submit-tweet.js" defer></script>
+
+    <!-- viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
-  <body>
+  <body class="layout">
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class ="top-left">tweeter</span>
       <span class="top-right"> 
         <div class="nav icon"> 
-          <b>Write</b> a new tweet 
+          <strong>Write</strong> a new tweet 
         </div> 
-        <i class="fa-solid fa-angles-down"></i>
+        <i id ="navAngleIcon" class="fa-solid fa-angles-down"></i>
       </span>
     </nav>
   <header>
@@ -55,19 +58,22 @@
           <img src="/images/profile-hex.png"> 
       </div>
       <div>
-          <h2>Your Name</h2>
+          <h3>Your Name</h3>
       </div>
   </header>
 
 
     <!-- Page-specific (main) content here -->
     <main id="container">
+      <div id = "alertMessage">
+      </div>
       <section class="new-tweet">
-        <form id ="sumbitTweet" action="/tweets">
+        <form id ="submitTweet" action="/tweets">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+          <label name="text" id="tweet-text"> </label>
           <div class="bottom">
             <button type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+            <output name="counter" class="counter" id="counter" for="tweet-text">140</output>
           </div>
         </form>
       </section>
@@ -90,6 +96,9 @@
         </footer>
       </article>
       <div id="tweets-container"></div>
+      <div>
+        <button id = "scrollUpButton"> <i class="fa-solid fa-angles-up"></i> </button>
+      </div>
     </main>
   </body>
 </html>
