--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
     <!-- viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
   </head>
 
