add arriw animation

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           <img src="/images/profile-hex.png"> 
       </div>
       <div>
-          <h3>Your Name</h3>
+          <h3>Hello, World</h3>
       </div>
   </header>
 
