--- a/public/index.html
+++ b/public/index.html
@@ -53,14 +53,14 @@
         <i id ="navAngleIcon" class="fa-solid fa-angles-down"></i>
       </span>
     </nav>
-  <header>
+   <header class="header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
       <div>
           <h3>Hello, World</h3>
       </div>
-  </header>
+   </header>
 
 
     <!-- Page-specific (main) content here -->
@@ -77,24 +77,7 @@
           </div>
         </form>
       </section>
-      <article>
-        <header class="tweet-header">
-          <div>
-            <img src="https://i.imgur.com/73hZDYK.png" alt="profile icon">
-            <p class="person-name">spiderman</p>
-          </div>
-          <div>@spiderman</div>
-        </header>
-        <p>I'm your friend!</p>
-        <footer class="tweet-footer">
-          <div >7 days ago</div>
-          <div class="tweet-footer-right">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart"></i>
-          </div>
-        </footer>
-      </article>
+ 
       <div id="tweets-container"></div>
       <div>
         <button id = "scrollUpButton"> <i class="fa-solid fa-angles-up"></i> </button>
